Fram till uppgift 5

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Labb 1 Grupp 1</title>
 </head>
-<body>
+<body style="background-color: pink;">
+    <div style="height: 40vh; width: 50vw; background-color: azure;">
+    <label for="color">Färg:</label>
+    <input type="text" name="color" id="color" class="textfield">
+
+    <br><br>
+    <label for="color">Innehåll:</label>
+    <input type="text" name="content" id="content" class="textfield">
+    <br><br>
+    <label for="color">Stil på box:</label>
+    <input type="checkbox" name="divStyle" id="divStyle" class="checkbox">
+    <br><br>
+
+    <button id="buttonId" name="knapp" value="Click me" style="height: 50px;width: 125px;">Tryck mig</button>
     
+    <div style=" background-color: darkmagenta;"> <label for="div" style="border: 70rem; width: 10vw; height: 5vh;"></label></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
