--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <button id="buttonId" name="knapp" value="Click me" style="height: 50px;width: 125px;">Tryck mig</button>
     
-    <div style=" background-color: darkmagenta;"> <label for="div" style="border: 70rem; width: 10vw; height: 5vh;"></label></div>
+    <div id="outputField" style="height: 3vh; width: 5vw; border: 0.2rem solid black" ></div>
     </div>
     <script src="script.js"></script>
 </body>
