--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Labb 1 Grupp 1</title>
 </head>
 <body style="background-color: pink;">
-    <label for="color">Färg:</label>
+    <h1 style="text-align:center;">Labb 1 Grupp 1</h1>
+    <section style="background-color: #9fe1c3; width: 50vw; height: 50vh; border-radius: 1rem; padding: 2rem; margin-left: auto; margin-right: auto;">
+
+    <label for="color">Färg:</label>   
     <input type="text" name="color" id="color" class="textfield">
 
     <br><br>
@@ -20,7 +23,7 @@
     <button id="buttonId" name="knapp" value="Click me" style="height: 50px;width: 125px;">Tryck mig</button>
     <br><br>
     <div id="outputField" style="height: 3.5vh; width: 20vw; border: 0.1rem solid black" ></div>
-    
+</section>
     <script src="script.js"></script>
 </body>
 </html>
